--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,18 @@
         <dependency>
             <groupId>net.code-story</groupId>
             <artifactId>http</artifactId>
-            <version>2.83</version>
+            <version>2.84-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-simple</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.4</version>
         </dependency>
 
         <dependency>
