--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.livingobjects.myrddin</groupId>
             <artifactId>myrddin</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.5</version>
         </dependency>
 
         <dependency>
