--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>net.code-story</groupId>
             <artifactId>http</artifactId>
-            <version>2.84-SNAPSHOT</version>
+            <version>2.83</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
