prefix views by swagger to avoid name conflicts

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,31 @@
 
     <packaging>jar</packaging>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-app</id>
+                        <phase>generate-resources</phase>
+                        <goals><goal>copy-resources</goal></goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/app</directory>
+                                </resource>
+                            </resources>
+                            <outputDirectory>${project.basedir}/target/classes/app</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>com.livingobjects.myrddin</groupId>
