--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>com.livingobjects.fluenthttp</groupId>
     <artifactId>fluenthttp-swagger</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
